scrollbar fixes

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -23,19 +23,20 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 1px;
+  width: 10px;
+  height: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  box-shadow: 0;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: grey;
-  border-radius: 10px;
+  background-color: grey;
+  background-image: none;
+  width: 10px;
 }
 
 h1,
